--- a/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
@@ -13,9 +13,9 @@
                 <div class="row">
                     <div class="col-md-3">
 
-                        <a href="/AgroConfiguration/SalesReturnList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                            <i class="fas fa-arrow-alt-circle-left"></i>
-                        </a>
+                        @*<a href="/AgroConfiguration/SalesReturnList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">*@
+                            @*<i class="fas fa-arrow-alt-circle-left"></i>
+                        </a>*@
                     </div>
                     <div class="col-md-6">
                         <h5 class="text-center text-bold">
