--- a/ERPWeb/Views/AgroConfiguration/_GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductFinishGoodList.cshtml
@@ -10,7 +10,7 @@
                 <th>Product Name </th>
                 <th>BatchCode</th>
                 <th>Finish Quantity</th>
-                <th>Quantity</th>
+                <th>UnitQty</th>
                 <th>Action </th>
 
             </tr>
@@ -29,7 +29,7 @@
                 <td>@item.FinishGoodProductName</td>
                 <td>@item.FinishGoodProductionBatch</td>
                 <td>@item.TargetQuantity</td>
-                <td>@item.Quanity</td>
+                <td>@item.Quanity@item.UnitName</td>
 
                 <td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>
 
