--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -143,7 +143,7 @@
                                 @Html.DropDownList("ddlMeasurementName", (IEnumerable<SelectListItem>)ViewBag.ddlMeasurementName, "--Select MeasurementName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                 <span class="error hide req-MeasurementName font-weight-bold">Measurement Name is required!</span>
                             </div>
-                            <div class="hide">
+                            <div class="col-md-3">
                                 <label for="ddlRawMaterial" class="col-form-label">Measurement Size</label>
                                 @*@Html.DropDownList("ddlMeasurementSize", (IEnumerable<SelectListItem>)ViewBag.ddlMeasurementSize, "--Select Measurement Size--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })*@
                                 <input type="text" id="ddlMeasurementSize" class="form-control form-control-sm" readonly />
