--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueView.cshtml
@@ -15,6 +15,9 @@
                     <th style="vertical-align:middle">Unit Name</th>
                     <th style="vertical-align:middle">Total IN</th>
                     <th style="vertical-align:middle">Total OUT</th>
+                    <th style="vertical-align:middle">Good Return</th>
+                    <th style="vertical-align:middle">Bad Return</th>
+                    <th style="vertical-align:middle">TotalReturn</th>
                     <th style="vertical-align:middle">Total Remain</th>
                     @*<th style="vertical-align:middle">Action</th>*@
                 </tr>
@@ -32,6 +35,9 @@
                         <td class="text-center">@item.UnitName</td>
                         <td class="text-center">@item.StockIN</td>
                         <td class="text-center">@item.StockOut</td>
+                        <td class="text-center">@item.GoodReturn</td>
+                        <td class="text-center">@item.BadReturn</td>
+                        <td class="text-center">@item.ReturnQty</td>
                         <td class="text-center">@item.CurrentStock</td>
                         @*<td class="text-center">
                             <a href="#" class="btn btn-warning btn-sm data-edit-item-Region" style="line-height:1" data-edit-item-Region="@item.RegionId"><i class="fa fa-pen"></i> Edit</a>
