--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
@@ -15,6 +15,7 @@
                     <th style="vertical-align:middle">Unit Name</th>
                     <th style="vertical-align:middle">Total IN</th>
                     <th style="vertical-align:middle">Total OUT</th>
+                    <th style="vertical-align:middle">Return In</th>
                     <th style="vertical-align:middle">Total Remain</th>
                     @*<th style="vertical-align:middle">Action</th>*@
                 </tr>
@@ -32,6 +33,7 @@
                         <td class="text-center">@item.UnitName</td>
                         <td class="text-center">@item.StockIN</td>
                         <td class="text-center">@item.StockOut</td>
+                        <td class="text-center">@item.StockINReturn</td>
                         <td class="text-center">@item.CurrentStock</td>
                         @*<td class="text-center">
                                 <a href="#" class="btn btn-warning btn-sm data-edit-item-Region" style="line-height:1" data-edit-item-Region="@item.RegionId"><i class="fa fa-pen"></i> Edit</a>
