--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -41,7 +41,7 @@
             <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
         </div>*@
 
-                                    <div class="col-md-2">
+                                    <div class="col-md-2" style="margin-top:-5px">
                                         <label class="col-form-label">InvoiceNo </label>
                                         <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
                                     </div>
