--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -49,7 +49,7 @@
                                     </div>
                                     <div class="card-body text-sm">
                                         <div class="row" style="margin-top:-15px">
-                                            <div class="col-md-2">
+                                            <div class="col-md-2" style="margin-top:-5px">
                                                 <label class="col-form-label">InvoiceNo </label>
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
                                             </div>
