--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
@@ -39,7 +39,7 @@
                                     <div class="card-body text-sm">
                                         <div class="row" style="margin-top:-15px">
 
-                                            <div class="col-md-2">
+                                            <div class="col-md-2"style="margin-top:-5px">
                                                 <label class="col-form-label">InvoiceNo </label>
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
                                             </div>
